# guppy-consumer

./: .env.example  .gitignore  README.md  pyproject.toml
guppy_consumer/: main.py
guppy_consumer/api/: admin_endpoints.py  endpoints.py  query_endpoints.py
guppy_consumer/config/: settings.py
guppy_consumer/models/raw/: __init__.py  amex_raw.py  wells_raw.py
guppy_consumer/parsers/: amex.py  base.py  detector.py  wells_fargo.py
guppy_consumer/services/: mongodb_service.py
guppy_consumer/services/raw/: __init__.py  hash_service.py  raw_duplicate_service.py  raw_insertion_service.py  raw_processing_service.py
